// Copyright 20120 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package recipes.build.chromium_3pp;

message InputProperties {
  // A prefix to the CIPD package name, for all 3pp packages.
  string package_prefix = 1;

  // Target platform. Must be a valid CIPD ${platform}.
  // See https://bit.ly/2Lp67iE for details.
  string platform = 2;

  // Force building the package, but do not upload to CIPD (copied from the
  // recipe 3pp.py in "infra/infra" repo).
  // This is forced to true when ran by trybots.
  bool force_build = 3;

  // A explicit list of package paths to be built. If empty, all known package
  // paths will be built.
  //
  // Package paths are src-relative paths to the folder(s) that contain the
  // file "3pp/3pp.pb". For example, the package path is "third_party/guava"
  // for a directory like:
  //
  //   - third_party/
  //     - guava/
  //       - 3pp/
  //         - 3pp.pb
  //         - install.sh
  //
  // Could also be a glob pattern like "third_party/android_deps/**" which scans
  // all the subdirectories under third_party/android_deps.
  //
  // Note that in tryjobs, package paths from the CLs will be added to
  // this list, if there were any.
  repeated string package_paths_to_build = 4;
}

